# stock-index-prediction

./: .gitignore  pyproject.toml
application/: config.py  crawler.py  datamodel.py  dependencies.py  main.py  models.py  predict.py  router.py  utils.py
application/routers/: predict.py  quote.py
application/scalers/: sh000001_X_scaler.pkl  sh000001_y_scaler.pkl  sh000002_X_scaler.pkl  sh000002_y_scaler.pkl  sh000300_y_scaler.pkl  sz399001_X_scaler.pkl  sz399001_y_scaler.pkl
notebook/: LSTM-Transformer.py  custom-timeseries-dataset.ipynb  custom_dataset.py  data-acquire.ipynb  data-analysis.ipynb  data-processing.ipynb  inference.ipynb  lightning-inference.ipynb  lstm-baseline.ipynb  lstm-multivariate-baseline.ipynb  lstm-univariate-baseline.ipynb  main.ipynb  modules.py  onnx-inference.ipynb  sh000001.ipynb  transformer.ipynb  utils.ipynb
notebook/checkpoints/: epoch=11-val_loss=0.30-other_metric=0.00.ckpt  epoch=11-val_loss=1.56-other_metric=0.00.ckpt  epoch=13-val_loss=0.30-other_metric=0.00.ckpt  epoch=15-val_loss=1.57-other_metric=0.00.ckpt  epoch=17-val_loss=0.30-other_metric=0.00.ckpt
notebook/model/: LSTM-7-1.onnx  LSTM-Transformer-7-1.onnx  LSTM-Transformer-7-5.onnx  TimeSeries_LSTM.onnx  Transformer-5-1.onnx  Transformer-7-5.onnx  Transformer-90-30.onnx
notebook/models/: LSTM-7-15.onnx  LSTM-7-30.onnx  LSTM-7-5.onnx  LSTM-90-30.onnx  LSTM-Transformer-7-15.onnx  LSTM-Transformer-7-30.onnx  LSTM-Transformer-90-30.onnx  TimeSeries_LSTM.onnx  Transformer-7-1.onnx  Transformer-7-15.onnx  Transformer-7-30.onnx
notebook/scaler/: sh000002_X_scaler.pkl
(+34 files in other folders)
