[tool.poetry]
name = "stock-index-prediction"
version = "0.1.0"
description = ""
authors = ["Peng Rao <raopend@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
notebook = "^7.1.3"
yfinance = "^0.2.38"
seaborn = "^0.13.2"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
plotly = "^5.21.0"
lightning = "^2.2.2"
tensorboard = "^2.16.2"
statsmodels = "^0.14.2"
torchinfo = "^1.8.0"
optuna-integration = "^3.6.0"
pyarrow = "^16.0.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
